# rust-cpp-cmake

./: .gitignore  CMakeLists.txt  Config.h.in  cpptest.cpp
rust_test/: Cargo.toml
rust_test/binding/: rust_test.h
rust_test/src/: lib.rs
